syntax = "proto3";
option java_package = "com.alipay.sofa.registry.common.model.client.pb";
option java_multiple_files = true;
option go_package = "proto";

import "DataBoxPb.proto";

message PushResourcePb {
  string registerId = 1;
  int64 version = 2;
  int64 timestamp = 3;
  int32 registerIdHash = 4;
  repeated DataBoxPb resources = 5;
}